fixing nav bar toggle on mobile

--- a/src/components/navigation/navigation.less
+++ b/src/components/navigation/navigation.less
@@ -36,7 +36,7 @@
 
 	@media all and (max-width:375px){
 		.header {
-			font-size:17px;
+			font-size:16px;
 		}
 	}
 	.navbar-toggle {
